[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/countdown.gd" type="Script" id=1]
[ext_resource path="res://music/fx/ready.ogg" type="AudioStream" id=2]
[ext_resource path="res://music/fx/3.ogg" type="AudioStream" id=3]
[ext_resource path="res://music/fx/2.ogg" type="AudioStream" id=4]
[ext_resource path="res://music/fx/1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sprites/title/countdown/3.png" type="Texture" id=6]
[ext_resource path="res://sprites/title/countdown/2.png" type="Texture" id=7]
[ext_resource path="res://sprites/title/countdown/1.png" type="Texture" id=8]
[ext_resource path="res://sprites/title/countdown/ready.png" type="Texture" id=9]

[node name="countdown" type="Node2D"]
script = ExtResource( 1 )

[node name="ready_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="3_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="2_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="1_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="3" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 6 )

[node name="2" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 7 )

[node name="1" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 8 )

[node name="ready" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 9 )

[connection signal="finished" from="ready_fx" to="." method="_on_ready_fx_finished"]
[connection signal="finished" from="3_fx" to="." method="_on_3_fx_finished"]
[connection signal="finished" from="2_fx" to="." method="_on_2_fx_finished"]
[connection signal="finished" from="1_fx" to="." method="_on_1_fx_finished"]
